# AdventOfCode

./: .codeitlater  .gitignore  README.md  day1.clj  day15.clj  day2.clj  day7.py  day8.py
2015/lisp-version/: 1.lisp
2015/py-version/: day19_p2.py
2015/rust-version/: Cargo.toml
2016/lisp-version/: day1.lisp  day10.lisp  day12.lisp  day13.lisp  day18.lisp  day19.lisp  day20.lisp  day21.lisp  day6.lisp  day7.lisp  day8.lisp  day9.lisp
2016/rust-version/: Cargo.toml
2017/: day15.clj  day15.py  day16.py  day3.clj  day4.clj
2017/rust-version/: Cargo.toml
2018/: day1.lisp  day11.lisp  day18.go  day2.lisp  day3.lisp  day4.lisp  day4.py  day5.lisp  day6.lisp  day8.lisp  day9.lisp  general.lisp
2018/lisp-version/: day5.lisp  day6.lisp  day7.lisp  day8.lisp  day9.lisp
2018/rust-version/: Cargo.toml
2019/: day1.rs  day3.rs  day4.rs  day5.rs  day6.rs
2019/day10/: day10.rs
2019/day11/: Cargo.toml  day11.rs
2019/day12/: Cargo.toml  day12.rs
2019/day13/: Cargo.toml
2019/day14/: Cargo.toml
2019/day15/: Cargo.toml
2019/day16/: Cargo.toml
2019/day17/: Cargo.toml
2019/day2/: day2.rs
2019/day25/: Cargo.toml
2019/day6/: day6.rs
2020/: tools.lisp
Count-Primes/: CP.rs
aoc2021/: Cargo.toml  README.md
aoc2021/lisp-version/: day1.lisp  day10.lisp  day11.lisp  day12.lisp  day13.lisp  day14.lisp  day15.lisp  day16.lisp  day17.lisp  day2.lisp  day20.lisp  day21.lisp  day25.lisp  day3.lisp  day4.lisp  day5.lisp  day6.lisp  day7.lisp  day8.lisp  day9.lisp
aoc2022/: Cargo.toml  README.md
tools/: Cargo.toml  download-input.lisp  tools.lisp
(+151 files in other folders)
