[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tools = {path = "../tools"}
hex = "0.4"
itertools = "0.10"
lazy_static = "1.4.0"
rayon = "1.5"

[profile.dev]
lto = true

[profile.dev.package."*"]
opt-level = 3
